# septic-config-generator

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  cli.py  codecov.yml  config.schema.json  dev-requirements.in  dev-requirements.txt  make_exe.bat  requirements.in  requirements.txt  runme.py  setup.cfg  setup.py  template_from_master.py
.config/: nextest.toml
.github/: codecov.yml  dependabot.yml  release-please-config.json
.github/workflows/: audit.yml  build-python.yml  build-workflow.yml  build.yml  ci.yml  coverage.yml  lint.yml  pr-name-validator.yml  pr.yml  publish-workflow.yml  pythonapp.yml  release-please.yml  test.yml  upload-workflow.yml
basic example/: example.yaml
basic example/masters/: 03_SopcProc_well.cnfg
basic example/templates/: 05_ExprModl_well.cnfg  05_SmpcAppl_well.cnfg
docs/: Changes_1.0_2.0.md  Howto_SCG.md  Howto_SCG_legacy.md  config.schema.json  septic_scratchpad.xml
docs/basic example/: example.cnfg  example.drawio  example.xlsx  example.yaml  example_drawio.csv  example_drawio_coords.csv  test_coords.csv
docs/basic example for 1.0/masters/: 05_ExprModl_well.cnfg
docs/basic example for 1.0/templates/: 03_SopcProc_well.cnfg  05_ExprModl_well.cnfg
docs/basic example for legacy 1.0/: example.cnfg  example.yaml
docs/basic example for legacy 1.0/templates/: 01_System.cnfg  06_DspGroupTables.cnfg
docs/basic example/templates/: 01_System.cnfg  02_SopcProc.cnfg  04_SmpcAppl.cnfg  05_ExprModl_well.cnfg  06_ExprModl.cnfg  07_DspGroupTables_well.cnfg  08_DspGroupTables_well.cnfg  091_DspGroupOverViewElements.cnfg  09_DspGroupOverview.cnfg
scg/: config_parser.py  scg.py  template_from_master.py
scg/helpers/: config_parser.py  helpers.py  version.py
src/: argparser.rs  args.rs  commands.rs  config.rs  datasource.rs  excelsource.rs  lib.rs  main.rs  renderer.rs  yamlconfig.rs
src/commands/: checklogs.rs  diff.rs  drawio.rs  make.rs  schema.rs  update.rs
src/commands/drawio/: components.rs  drawio_to_png.rs  get_coords.rs  to_png.rs
tests/: test_config_parser.py  test_helpers.py  test_scg.py
tests/testdata/: drawio_test_coords.csv  test.csv  test.drawio  test.xlsx  test.yaml  test_coords.csv  test_drawio.csv  test_reference.cnfg
tests/testdata/rundir/: septic.cnc  septic.out
tests/testdata/templates/: 00_plaintext.tmpl  01_normals.tmpl  02_specials.tmpl  03_globals.tmpl  04_include.tmpl  05_expressions.tmpl  06_encoding.tmpl  07_functions.tmpl  08_sources.tmpl  included.tmpl
