[package]
name = "septic-config-generator"
version = "0.1.0"
edition = "2021"
description = "A tool to generate SEPTIC config file from template files"
license = "MIT"
publish = false

[[bin]]
name = "scg"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true    # 64% reduction
opt-level = "z" # 11% reduction, lto = true has almost no effect w/o this
lto = true      # 25 % reduction, result is 24% of original
#codegen-units = 1  # 2.5% reduction
#panic = "abort"    # 7.5% reduction

[dependencies]
calamine = "0.19.1"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
diffy = "0.3.0"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
minijinja = { version = "0.30.2", features = ["source"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
