[package]
name = "septic-config-generator"
version = "2.11.2"
edition = "2021"
description = "A tool to generate SEPTIC config file from template files"
license = "MIT"
publish = false
build = "build.rs"

[package.metadata.winresource]
FileDescription = "SEPTIC config generator"
OriginalFilename = "scg.exe"
LegalCopyright = "Copyright © Equinor ASA 2023"

[[bin]]
name = "scg"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true    # 64% reduction
opt-level = "z" # 11% reduction, lto = true has almost no effect w/o this
lto = true      # 25 % reduction, result is 24% of original
#codegen-units = 1  # 2.5% reduction
#panic = "abort"    # 7.5% reduction

[dependencies]
anyhow = "1.0.81"
calamine = "0.24.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.1.8", features = ["derive", "cargo"] }
colored = "2.0.0"
csv = "1.2.2"
diffy = "0.3.0"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
glob = "0.3.1"
indexmap = { version = "2.2.3", features = ["serde"] }
minijinja = { version = "2.0.1", features = ["loader", "preserve_order"] }
regex = "1.7.1"
self_update = { version = "0.39.0", features = [
    "archive-zip",
    "archive-tar",
    "compression-flate2",
    "compression-zip-deflate",
    "compression-zip-bzip2",
] }
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"

[dev-dependencies]
filetime = "0.2.23"
tempfile = "3.4.0"

[build-dependencies]
winresource = "0.1.15"
